plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'C207'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client' //MariaDB 수정
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //이메일 인증 의존성 추가-> 이메일을 보낼때 사용. -> 필요 없을 시 삭제 가능
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    //이메일 형식 확인 의존성
    implementation 'commons-validator:commons-validator:1.7'

    // coolsms 의존성 추가
    implementation 'net.nurigo:sdk:4.2.7'

    // redis 인증 유효기간 생성
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //spring-security 추가
    implementation 'org.springframework.boot:spring-boot-starter-security'
    //jwt 추가
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    //modelMapper 라이브러리 추가
    implementation 'org.modelmapper:modelmapper:3.1.1'

    //location 위치 저장용 db
    implementation 'org.hibernate.orm:hibernate-spatial'
    implementation 'org.locationtech.jts:jts-core:1.19.0'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // test에서 lombok을 사용하기 위해서..
    testRuntimeOnly 'org.projectlombok:lombok'
    testImplementation 'org.projectlombok:lombok'

    // org.json 라이브러리 추가 (XML -> JSON)
    implementation 'org.json:json:20231013'

    // openVidu v2 라이브러리 추가
    // https://mvnrepository.com/artifact/io.openvidu/openvidu-java-client
    implementation group: 'io.openvidu', name: 'openvidu-java-client', version: '2.31.0'

    // https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api
    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'


    // websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.webjars:sockjs-client:1.5.1'
    implementation 'org.webjars:stomp-websocket:2.3.4'


    // Google Speech-to-text
    implementation 'com.google.cloud:google-cloud-speech:4.51.0'

}

tasks.named('test') {
    useJUnitPlatform()
}

bootRun {
    String activeProfile = System.properties['spring.profiles.active']
    systemProperty "spring.profiles.active", activeProfile
}
